Adding css styles and animations

--- a/src/components/ExchngeRates/ExchngeRates.module.scss
+++ b/src/components/ExchngeRates/ExchngeRates.module.scss
@@ -1,8 +1,11 @@
+@import '../../variables.scss';
+
 .exchangeRates {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: lightgray;
+  background: linear-gradient(125deg, $accent, $main);
+  color: white;
   height: 50px;
 
   .ratesWrapper {
@@ -16,5 +19,8 @@
 
   p {
     margin: 0;
+  }
+  b {
+    color: $titles;
   }
 }
