--- a/src/components/Results/Results.module.scss
+++ b/src/components/Results/Results.module.scss
@@ -1,3 +1,5 @@
+@import '../../variables.scss';
+
 .results {
   display: flex;
   flex-direction: column;
@@ -7,21 +9,30 @@
     display: flex;
     justify-content: center;
     width: 80%;
+    max-width: 800px;
     margin: 0 auto;
 
     article {
+      display: flex;
       flex: 1;
-      border: 1px solid gray;
-      margin: 0 10px;
+    }
+    
+    .resultsModal {
+      flex: 1;
+      margin: 0 20px;
       padding: 20px;
+      background: linear-gradient($main, $lighter);
+      color: white;
+      border-radius: 10px;
 
       h2 {
         margin: 0;
+        color: $titles;
       }
 
-      .currency {
+      .smaller {
         font-size: 0.8em;
-        color: gray;
+        color: $titles;
       }
 
       ul {
@@ -36,9 +47,9 @@
     }
   }
 
-  .dealType,
-  .dealPercent {
+  .deal {
     font-weight: bold;
-    font-size: 1.05em;
+    font-size: 1.15em;
+    color: $main;
   }
 }
