--- a/src/components/SearchForm/SearchForm.module.scss
+++ b/src/components/SearchForm/SearchForm.module.scss
@@ -1,3 +1,5 @@
+@import '../../variables.scss';
+
 .searchForm {
   display: flex;
   justify-content: center;
@@ -10,9 +12,33 @@
     box-sizing: border-box;
     margin: 0 10px;
     font-size: 0.9em;
+    border-radius: 5px;
   }
-
+  
+  input {
+    border: 1px solid lightgray;
+  }
+  
   select {
     height: 28px;
+  }
+  
+  button {
+    color: white;
+    border: none;
+    background-color: $main;
+    cursor: pointer;
+
+    &:hover {
+      background-color: $darker;
+    }
+    
+    &:active {
+      background-color: $lighter;
+    }
+    
+    &:focus {
+      outline: none;
+    }
   }
 }
